test/integration/bad/new/type-size-bad28.stan
data { positive_ordered[T~normal(0,1)] x;}